Fix alignement in book.php

--- a/booking/assets/css/frontend.css
+++ b/booking/assets/css/frontend.css
@@ -39,7 +39,7 @@ body {
 }
 
 #book-appointment-wizard #header {
-    padding: 5px;
+    padding: 5px 0px;
     height: 90px;
     background: rgba(0,0,0,0);;
 }
@@ -70,7 +70,7 @@ body {
 }
 
 #book-appointment-wizard .wizard-frame {
-    padding: 10px 20px;
+    padding: 10px 0px;
 }
 
 #book-appointment-wizard .wizard-frame .frame-container {
@@ -85,6 +85,11 @@ body {
 
 #book-appointment-wizard .frame-container h3 {
     color: #F2F2F2;
+}
+
+#book-appointment-wizard .frame-container .form-group .row {
+    margin-left: 0;
+    margin-right: 0;
 }
 
 #book-appointment-wizard .frame-container .frame-content {
@@ -274,6 +279,14 @@ body {
 #book-appointment-wizard #wizard-frame-3 label {
     color: #F2F2F2;
     font-size: 1.2em;
+}
+
+#book-appointment-wizard #wizard-frame-3 .col-left {
+    padding-left: 0;
+}
+
+#book-appointment-wizard #wizard-frame-3 .col-right {
+    padding-right: 0;
 }
 
 #book-appointment-wizard #wizard-frame-4 .frame-content {
